force-app/main/default/objects/Contact/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Genetics &amp; Model Development</fullName>
            </value>
            <value>
                <fullName>Computational Sciences</fullName>
            </value>
            <value>
                <fullName>Genetics Medicines Platform &amp; Pipeline (Ophthalmology, Auditory, ERT)</fullName>
            </value>
            <value>
                <fullName>I-CUBED (Immune &amp; Inflammation, Immune-Oncology, Oncology, Infection Diseases &amp; Immune Tech.)</fullName>
            </value>
            <value>
                <fullName>MAGICS (Muscle/Metabolism, Aging, Genetics, Cardiovascular/Renal, Skeletal/Connective Tissue Diseases)</fullName>
            </value>
            <value>
                <fullName>Neuroscience</fullName>
            </value>
            <value>
                <fullName>PT2 (Protein Therapeutics &amp; Platform Technology, TP, Bispecifics, PES)</fullName>
            </value>
            <value>
                <fullName>Regeneron Cell Medicines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>