force-app/main/default/objects/Contact/fields/TFA__c.field-meta.xml
<CustomField>
    <fullName>TFA__c</fullName>
    <label>TFA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aging</fullName>
            </value>
            <value>
                <fullName>Auditory</fullName>
            </value>
            <value>
                <fullName>Bispecifics</fullName>
            </value>
            <value>
                <fullName>Cardiovascular (CV)</fullName>
            </value>
            <value>
                <fullName>Connective Tissue Disorder/Synthetic Biology and Cell Engineering (CTD/SBCE)</fullName>
            </value>
            <value>
                <fullName>Co-Stim</fullName>
            </value>
            <value>
                <fullName>Editing Technologies and Therapeutic Cargo (ETTC)</fullName>
            </value>
            <value>
                <fullName>Enzyme Replacement Therapeutics (ERT)</fullName>
            </value>
            <value>
                <fullName>Human Systems</fullName>
            </value>
            <value>
                <fullName>Immune &amp; Inflammation (I&amp;I)</fullName>
            </value>
            <value>
                <fullName>Infectious Diseases (ID)</fullName>
            </value>
            <value>
                <fullName>Neuroscience</fullName>
            </value>
            <value>
                <fullName>New Targets Investigation</fullName>
            </value>
            <value>
                <fullName>Obesity, Muscle &amp; Metabolism (OMM)</fullName>
            </value>
            <value>
                <fullName>Oncology/Immuno-Oncology (OIO)</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>VelociGene</fullName>
            </value>
            <value>
                <fullName>VelociHum (VH)</fullName>
            </value>
            <value>
                <fullName>VelociImmune (VI)</fullName>
            </value>
            <value>
                <fullName>Viral Delivery Technologies (VDT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>